# prevengos-plug-java

./: .env.sample  .gitignore  ARCHITECTURE.md  LICENSE  README.md  arquitectura_integral_prl_app_java_python_prevengos_canvas.md  build.gradle  build.gradle.kts  docker-compose.yml  prl_notifier_arquitectura_roadmap_y_plan_de_becarios_mvp_→_crm.md  requirements.txt  settings.gradle  settings.gradle.kts
.github/workflows/: ci-cd.yml
android-app/: README.md  build.gradle  build.gradle.kts
app/: __init__.py  main.py
app/config/: __init__.py  settings.py
app/db/: __init__.py  session.py
app/etl/: __init__.py  base.py
app/modules/: __init__.py
app/notifications/: __init__.py  base.py
app/rules/: __init__.py  engine.py
app/tasks/: __init__.py  queue.py
app/workflows/: __init__.py  base.py
contracts/http/: README.md
contracts/json/: README.md
contracts/pacts/: gateway-plug-api.json
desktop-app/: README.md  build.gradle  build.gradle.kts
docs/: CHANGELOG.md  guia-de-implementacion.md  quickstart.md
docs/data-stores/: README.md  sync-flows.md
docs/infra/: requirements.md
docs/integrations/: cdc-sync-events.md  csv-formatos.md  drops.md  prevengos-terceros.md  prl-notifier-readiness.md
frontend/: README.md
migrations/: README.md
payloads/: README.md  sync-request.json
python-engine/: README.md  pyproject.toml
python-engine/app/: __init__.py  celery_app.py  config.py  main.py  schemas.py
python-engine/app/routes/: __init__.py  notifications.py
python-engine/app/tasks/: __init__.py  notifications.py
scripts/: export_rrhh.sh
(+433 files in other folders)
